syntax = "proto3";

package rest;

option go_package = ".;rest";

// 在线状态查询请求
message OnlineStatusRequest {
  repeated int64 user_ids = 1;
}

// 在线状态查询响应
message OnlineStatusResponse {
  map<int64, bool> status = 1;
}
